--- a/static/stylesheets/scss/theme-variables.scss
+++ b/static/stylesheets/scss/theme-variables.scss
@@ -30,8 +30,8 @@ $font-family-base:        $font-family-sans-serif;
 
 $font-weight-300:         300;
 $font-weight-400:         400;
-$font-weight-600:         600; 
-$font-weight-700:         700; 
+$font-weight-600:         600;
+$font-weight-700:         700;
 
 $headings-font-weight:    $font-weight-600;
 
@@ -180,5 +180,5 @@ $data-sources-color: $brand-terciary;
 // Sankey Viz
 // --------------
 
-$sankey-budget-color:     saturate( lighten( $brand-secondary, 12% ), 10% );                          // #1F77B4;
-$sankey-execution-color:  saturate( lighten( adjust-hue( $sankey-budget-color, 100% ), 10% ), 10% );  //#E377C2;
+$sankey-income-color: $brand-primary;
+$sankey-expense-color: complement($sankey-income-color);
