Setup theme styles
civio/presupuesto-management#506

--- a/static/stylesheets/scss/theme-variables.scss
+++ b/static/stylesheets/scss/theme-variables.scss
@@ -12,9 +12,9 @@ $gray-lightest:         lighten($gray-base, 96%) !default;
 
 $text-color:            #414141;
 
-$brand-primary:         #d32e12;
-$brand-secondary:       #49647A;
-$brand-terciary:        #DDCFC1;
+$brand-primary:         #df0408;
+$brand-secondary:       #4E4E4E;
+$brand-terciary:        #ECEBEB;
 
 $link-color:            $brand-primary;
 $link-hover-color:      $link-color;
@@ -48,8 +48,8 @@ $container-large-desktop:  (1050px + $grid-gutter-width);
 // Main Entity Logo
 // -------------
 
-$main-entity-logo-width:   81px;
-$main-entity-logo-height:  68px;
+$main-entity-logo-width:   174px;
+$main-entity-logo-height:  73px;
 
 
 // Navbar
@@ -77,7 +77,7 @@ $navbar-default-link-active-bg:       $brand-terciary;
 // --------------
 
 $footer-color: white;
-$footer-bg: $brand-primary;
+$footer-bg: #242424;
 
 
 // Page Header
